# 2025-Cmake_Learning

./: .git_template  .gitignore  CMakeLists.txt  README.md  main.cpp
doc/: Git规范.md
lesson1_1/: CMakeLists.txt  add.hpp
lesson1_1/hello_world.dir/Debug/: hello_world.ilk
lesson1_2/: CMakeLists.txt  main.cpp
lesson2_1/: CMakeLists.txt  main.cpp
lesson2_1/add/: CMakeLists.txt  add.hpp
lesson2_1/lib/: add_static.lib
lesson2_2/: CMakeLists.txt  main.cpp
lesson2_2/add/: CMakeLists.txt
lesson2_opencv/: CMakeLists.txt  main.cpp
